# securoserv

./: README.md  TODO.txt
docs/: AUTHENTICATION_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md
securo/: Cargo.toml  LICENSE  README.md
securo/src/: lib.rs  logger.rs  tls.rs
securo/src/client/: crypto.rs  pin.rs
securo/src/server/: crypto.rs  pin.rs
securoclient/: Cargo.toml
securoclient/src/: main.rs
securoclient/src/modules/: antidebug.rs  auth.rs  client.rs  license.rs  messaging.rs  token.rs
securoserv/: .gitignore  Cargo.toml
securoserv/scripts/: gen-pinned-cert.sh
securoserv/src/: admin.rs  handlers.rs  license.rs  main.rs
securoserv/src/db/: init.rs  mod.rs  models.rs  queries.rs  schema.rs
