[package]
name = "securoclient"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
debug = false
# lto = "fat"

# RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.dev]
incremental = true
debug = true

[dependencies]
securo = {path = "../securo"}
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-manual-roots", "json", "gzip", "cookies"] }
rustls = { version = "0.23.32", default-features = false, features = ["ring"]}
rustls-pemfile = "2.2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
chrono = "0.4.42"
ed25519-dalek = "2.1"
base64 = "0.22"
pqc_kyber = { version = "0.7", features = ["kyber1024"] }
crypto_box = "0.9"
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = {version = "0.3.9", features = ["debugapi"]}
